# edge-tts-android

./: .gitignore  README.md  flake.nix  settings.gradle.kts
.github/workflows/: android-release.yml
app/: build.gradle.kts
app/src/androidTest/java/top/initsnow/edge_tts_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/top/initsnow/edge_tts_android/: EdgeTtsApplication.java  EdgeTtsCheckDataActivity.java  EdgeTtsInstallDataActivity.java  EdgeTtsNative.java  EdgeTtsService.java  EngineSettings.java  MainActivity.java  VoiceInfo.java  VoicePickerActivity.java  VoiceRepository.java
app/src/main/res/layout/: activity_main.xml  activity_voice_picker.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: tts_engine.xml
app/src/test/java/top/initsnow/edge_tts_android/: ExampleUnitTest.java  VoiceInfoTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs
