[package]
name = "edge-tts-android-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "edge_tts_android"
crate-type = ["cdylib"]

[dependencies]
edge-tts-rust = { git = "https://github.com/initsnow/edge-tts-rust", rev = "06dcc648a14d9658c9938d1396390f7916df17a1" }
futures-util = "0.3"
jni = "0.21"
minimp3 = "0.5"
once_cell = "1.21"
serde_json = "1.0"
tokio = { version = "1.45", features = ["io-util", "net", "rt-multi-thread", "sync", "time"] }

[profile.dev]
debug = 1
strip = "debuginfo"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
